--- a/python.ipynb
+++ b/python.ipynb
@@ -2,6 +2,90 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f7aba6cb",
+   "metadata": {},
+   "source": [
+    "## Chapter 1 — Getting Started with Python\n",
+    "Introduction to Python\n",
+    "\"Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together. Python’s simple, easy to learn syntax emphasizes readability and therefore reduces the cost of program maintenance. Python supports modules and packages, which encourages program modularity and code reuse. The Python interpreter and the extensive standard library are available in source or binary form without charge for all major platforms, and can be freely distributed.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6cc6649",
+   "metadata": {},
+   "source": [
+    "## What is interactive programming in python?\n",
+    "Interactive Programming is when we run the code directly on the terminal. Here, every line is executed and the output is given in an instant. Continuos interlinked commands are not possible in interactive mode of python. We do not need to save anything in order to run the code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79e1ebeb",
+   "metadata": {},
+   "source": [
+    "## What is a script programming in python?\n",
+    "In the script mode of python, we write the whole code and then it is executed at once as a whole. We need to save the file in order to execute it. In the case of python, the terminal command is \"python -file name\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0864ce4",
+   "metadata": {},
+   "source": [
+    "## Interactive Python in Jupyter\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1855b3e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the product if a and b\n",
+      "5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 50\n",
+    "b = 100\n",
+    "print(\"What is the product if a and b\")\n",
+    "print(a * b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eff2b1d4",
+   "metadata": {},
+   "source": [
+    "## Script mode in Jupyter Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ebbeb27d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python test.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "27513956",
    "metadata": {},
    "source": [
@@ -141,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
